fix spacing after workshop leads

--- a/src/ui/styles/blocks/offset.block.css
+++ b/src/ui/styles/blocks/offset.block.css
@@ -36,6 +36,10 @@
   margin-top: 12rem;
 }
 
+.before-16 {
+  margin-top: 16rem;
+}
+
 .after-none {
   margin-bottom: 0;
 }
@@ -63,6 +67,10 @@
 @media (max-width: 887px) {
   .before-5-atmobile {
     margin-top: 5rem;
+  }
+
+  .before-16 {
+    margin-bottom: 12rem;
   }
 
   .after-12 {
