--- a/src/ui/styles/blocks/workshop.block.css
+++ b/src/ui/styles/blocks/workshop.block.css
@@ -31,11 +31,21 @@
   padding: 2rem;
 }
 
+.cta {
+  margin-top: 16rem;
+  margin-bottom: 21rem;
+}
+
 @media (max-width: 887px) {
   .topic-icon {
     position: initial;
     display: block;
     margin: 0 auto 1.25rem auto;
+  }
+
+  .cta {
+    margin-top: 12rem;
+    margin-bottom: 16rem;
   }
 }
 
